--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Gists</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tab_home">Home</string>
+    <string name="drawer_close">close</string>
+    <string name="drawer_open">open</string>
 </resources>
