--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="tab_home">Home</string>
     <string name="drawer_close">close</string>
     <string name="drawer_open">open</string>
+    <string name="points_fragment_counter">Points</string>
 </resources>
